--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         --><div id="center_middle"><nav id="nav"><ul>
                 <li>Меню</li>
                 <li>Відгуки</li>
-                <li>Контаdsrfsrfкти</li>
+                <li>Контакти</li>
             </ul>
         </nav>
         <div id="main" onmouseout="alignRight()"><span>
