--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <h3>Сторінку востаннє редаговано 21.10.23</h3>
             <h4>Лабораторна 5</h4>
         </footer>
-        <!-- <script src="script.js">
+        <script src="script.js">
             
-        </script> -->
+        </script>
     </body>
 </html>
 
